2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkshow.[hc]: Formatting fixes

	* gtk/gtkmountoperation.c: Add docs

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 507389 – use gslice for gtksettings

	* gtk/gtksettings.c: Change from g_new0/g_free to use GSlice.
	Report and patch by Christian Persch.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 523562 - gtk-update-icon-cache core dumps when run concurrently and
	when options are missing

	* gtk/updateiconcache.c: Open the cache file (O_CREAT | O_EXCL) so
	that other processes that try to open it will fail gracefully.  Also
	fix a crasher caused by lack of a NULL check.  Report and patch
	by Erwann Chenede.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 526635 - _gdk_window_get_toplevel handles FOREIGN windows

	* gdk/x11/gdkwindow-x11.c (_gdk_window_get_toplevel): Check
	!WINDOW_IS_TOPLEVEL instead of checking for GDK_WINDOW_CHILD,
	so that we also take into account for foreign windows.
	Report and patch by Nathaniel Smith.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 525461 - Don't invalidate under an input-only child

	* gdk/x11/gdkgeometry-x11.c (_gdk_window_move_resize_child):
	Check that the window is not input-only before invalidating.
	Report and patch by Owen Taylor.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 524110 - Gdk should not assume reparenting WMs when retrieving
	window frame extents

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents):
	Use _NET_FRAME_EXTENTS, if available.  Patch by Danny Baumann.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 522269 - Evince windows sometimes incorrectly unmaximized,
	caused by missing flag initialization

	* gdk/x11/gdkwindow-x11.c (set_initial_hints): Initialize
	top-level private flags correctly.  Patch by Danny Baumann.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 534463 - non-editable GtkTextView should not call
	gtk_im_context_focus_in in focus event
